[gd_scene load_steps=6 format=3 uid="uid://cs7twesq7bmwk"]

[ext_resource type="Script" uid="uid://brlsr3jugk3d6" path="res://Scenes/Player/Player.gd" id="1_s0eop"]
[ext_resource type="Texture2D" uid="uid://c6t1rviea0cgn" path="res://assets/ships/ships_human_1.png" id="2_ft8w5"]
[ext_resource type="PackedScene" uid="uid://djw6akt1l2yiu" path="res://Scenes/Shield/Shield.tscn" id="3_h54ih"]
[ext_resource type="AudioStream" uid="uid://gigh2cpmfwae" path="res://assets/sounds/explosions/sfx_exp_medium11.wav" id="4_ude3g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ude3g"]
radius = 12.0

[node name="Player" type="Area2D"]
collision_mask = 28
script = ExtResource("1_s0eop")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("2_ft8w5")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ude3g")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Shield" parent="." instance=ExtResource("3_h54ih")]

[node name="GunMount_L" type="Marker2D" parent="."]
position = Vector2(-9, -17)

[node name="GunMount_R" type="Marker2D" parent="."]
position = Vector2(9, -17)

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ude3g")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
